[tool.poetry]
name = "mirror-tool"
version = "0.4.1"
description = "A tool for managing git mirrors."
readme = "README.md"
homepage = "https://github.com/rohanpm/mirror-tool"
repository = "https://github.com/rohanpm/mirror-tool"
authors = ["Rohan McGovern <rohan@mcgovern.id.au>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
"mirror-tool" = "mirror_tool.cmd:entrypoint"

[tool.poetry.dependencies]
python = ">=3.9,<4"
"ruamel.yaml" = ">=0.17.21"
jsonschema = ">=4.4.0"
requests = ">=2.27.1"
Jinja2 = ">=3.1.2"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.1"
pytest-cov = ">=3.0.0"
requests-mock = ">=1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
